[gd_scene load_steps=3 format=3 uid="uid://drlm7hvlhxf3i"]

[ext_resource type="Script" path="res://Scripts/LevelMenu.gd" id="1_werbx"]
[ext_resource type="Texture2D" uid="uid://1r1rhhei0goq" path="res://Assets/GUI Elements/Лапка.svg" id="2_3u73j"]

[node name="LevelMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_werbx")

[node name="Level_1" type="Button" parent="."]
layout_mode = 0
offset_left = 113.0
offset_top = 121.0
offset_right = 269.0
offset_bottom = 261.0
icon = ExtResource("2_3u73j")
flat = true
expand_icon = true

[node name="Level_2" type="Button" parent="."]
layout_mode = 0
offset_left = 283.0
offset_top = 121.0
offset_right = 471.0
offset_bottom = 258.0
text = "Level 2"

[node name="Level_3" type="Button" parent="."]
layout_mode = 0
offset_left = 471.0
offset_top = 121.0
offset_right = 659.0
offset_bottom = 257.0
text = "Level 3
"

[node name="Level_4" type="Button" parent="."]
layout_mode = 0
offset_left = 659.0
offset_top = 121.0
offset_right = 847.0
offset_bottom = 257.0
text = "Level 4
"

[node name="Level_5" type="Button" parent="."]
layout_mode = 0
offset_left = 95.0
offset_top = 291.0
offset_right = 283.0
offset_bottom = 428.0
text = "Level 5
"

[node name="Level_6" type="Button" parent="."]
layout_mode = 0
offset_left = 283.0
offset_top = 291.0
offset_right = 471.0
offset_bottom = 429.0
text = "Level 6
"

[node name="Level_7" type="Button" parent="."]
layout_mode = 0
offset_left = 471.0
offset_top = 291.0
offset_right = 659.0
offset_bottom = 430.0
text = "Level 7
"

[node name="Level_8" type="Button" parent="."]
layout_mode = 0
offset_left = 659.0
offset_top = 291.0
offset_right = 847.0
offset_bottom = 430.0
text = "Level 8"

[node name="Level_9" type="Button" parent="."]
layout_mode = 0
offset_left = 95.0
offset_top = 459.0
offset_right = 283.0
offset_bottom = 595.0
text = "Level 9
"

[node name="Level_10" type="Button" parent="."]
layout_mode = 0
offset_left = 283.0
offset_top = 459.0
offset_right = 469.0
offset_bottom = 597.0
text = "Level 10"

[node name="Level_11" type="Button" parent="."]
layout_mode = 0
offset_left = 469.0
offset_top = 459.0
offset_right = 657.0
offset_bottom = 595.0
text = "Level 11
"

[node name="Level_12" type="Button" parent="."]
layout_mode = 0
offset_left = 659.0
offset_top = 459.0
offset_right = 847.0
offset_bottom = 598.0
text = "Level 12
"

[connection signal="pressed" from="Level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level_3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Level_4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Level_5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level_6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="Level_7" to="." method="_on_level_7_pressed"]
[connection signal="pressed" from="Level_8" to="." method="_on_level_8_pressed"]
[connection signal="pressed" from="Level_9" to="." method="_on_level_9_pressed"]
[connection signal="pressed" from="Level_10" to="." method="_on_level_10_pressed"]
[connection signal="pressed" from="Level_11" to="." method="_on_level_11_pressed"]
[connection signal="pressed" from="Level_12" to="." method="_on_level_12_pressed"]
